@@ -303,3 +303,31 @@ ul.errorlist.nonfield {
 #proEmail, #proFName, #proLName, #proInfo {
     width: fit-content;
 }
+
+#cngPassHead {
+    text-align: center;
+}
+
+#overlay {
+  position: fixed;
+  display: none;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0,0,0,0.5);
+  z-index: 2;
+}
+
+#overlaytext{
+  position: absolute;
+  top: 60%;
+  left: 50%;
+  font-size: 50px;
+  color: white;
+  transform: translate(-50%,-50%);
+  -ms-transform: translate(-50%,-50%);
+    text-align: center;
+}
