@@ -1,6 +1,8 @@
 {% load static %}
 <!doctype html>
+
 <html lang="en-US">
+
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
